# tauri-demo

./: package.json  vite.config.ts
src/: App.css  App.tsx  log.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: app_config.rs  commands.rs  device_id.rs  dock.rs  lib.rs  tray.rs  unread_count.rs  utils.rs  window.rs
src-tauri/src/pb/: mod.rs  pb.rs
src-tauri/src/protobuf/: event_announce_notice.proto  event_apps_upload.proto  event_asr.proto  event_chatroom_info_update.proto  event_chatroom_union_update.proto  event_common.proto  event_conversation_update.proto  event_cs_service_change.proto  event_cs_stat_overview.proto  event_device_capture_upload.proto  event_device_log_upload.proto  event_emoji_update.proto  event_friend_cate_create.proto  event_friend_cate_delete.proto  event_friend_cate_move.proto  event_friend_cate_update.proto  event_friend_delete.proto  event_friend_update.proto  event_medal_update.proto  event_message_cancel.proto  event_message_chatroom_apply_handle.proto  event_message_flush.proto  event_message_read.proto  event_message_status.proto  event_notice.proto  event_notice_device_upgrade.proto  event_organization_push.proto  event_organization_update.proto  event_pk_achievement_change.proto  event_push.proto  event_push_ding.proto  event_read_later.proto  event_redpack_open.proto  event_remind_note_push.proto  event_send.proto  event_trtc.proto  event_unread_clear.proto  event_user_info_update.proto  event_ybs_app_unread_total.proto  event_ybs_new_task.proto  (+22 more)
src/components/: StateDemo.tsx
src/jsBridge/: MIGRATION.md  README.md  app.ts  autostart.ts  clipboard.ts  core.ts  event.ts  file.ts  fs.ts  globalShortcut.ts  index.ts  log.ts  notification.ts  opener.ts  os.ts  path.ts  store.ts  window.ts
src/modules/: AutostartModule.tsx  ClipboardModule.tsx  FileModule.tsx  GreetingModule.tsx  (+8 more)
(+5 files in other folders)
